jEdit 4.4 version history
       (changes since jEdit 4.3)

{{{ Version 4.4pre1

Thanks to Björn "Vampire" Kautler, Alan Ezust, Eric Berry, Shlomy
Reinstein, Damien Radtke, Dale Anson, Matthieu Casanova, Eric Le Lay and
Bernhard Walle for contributing to this release.

{{{ Bug fixes

- Fix # 2924261, BufferLocal ignores request to change encoding.
  (Dale Anson)

- Fix # 2921611 - PluginSets fail to load grand-dependencies. (Damien Radtke)
  Removed unnecessary popup warnings from InstallPanel when loading a
  pluginset. (Alan Ezust)

- Fix # 2920287 - Macro recording for home/end actions fixed. (Alan Ezust)

- fix #1439605 - remove installer.VariableGridLayout (r16596).

- Fixed bug in "selection-length" status bar widget: The widget was not added
  to the edit bus, so it wasn't updated when the edit pane changed.
  (Shlomy Reinstein)

- Fixed #2920352: Can't disable "Restore previously open files on startup".
  (Shlomy Reinstein)

- Searching for regex "^\s*.*$" missed every second line of adjacent
  matching lines. (SF.net bug #2915720 - Kazutoshi Satoda)

}}}
{{{ API changes

- Added a method for unregistering macro handlers: Macros.unregisterHandler().

}}}
{{{ Editing
- Added the missing doxygen commands for doxygen v1.6.1
  (bug #2895272 - report and patch from Bernhard Walle).
  doxygen now highlights quoted strings in comments.

- Added regex.xml mode file (#2782258 - Kevin Hunter)

}}}
{{{ Miscellaneous

- Added actions for eating whitespace at word ends in both directions
  for findWordStart. (#1953341 - strank)

- Added a configurable selection foreground color. If set, this color will be
  used for the selection foreground instead of the syntax highlighting color.
  The new option can be set from Global Options -> Text Area.
  (Shlomy Reinstein)

- Implemented feature request #2919875: Namable views. You can now specify a
  name for each view using View -> Set view title. The name is persistent in the
  perspective.xml file.
